gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idp-platform
  labels:
    name: idp-platform
    managed-by: argocd
